fix DSL view overflow

--- a/src/components/view/style/ShowOverlay.module.css
+++ b/src/components/view/style/ShowOverlay.module.css
@@ -3,6 +3,7 @@
 }
 
 .overlay {
+    overflow: auto;
     position: fixed;
     top: 0;
     right: 0;
@@ -17,8 +18,10 @@
 }
 
 .popup {
+    height: 95%;
     background-color: #fff;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    overflow: auto;
 }
