--- a/src/styles/CoursePlanner.module.css
+++ b/src/styles/CoursePlanner.module.css
@@ -1,4 +1,3 @@
-
 .main {
  
   display: flex;
@@ -13,6 +12,10 @@
   justify-content: space-between;
   align-items: flex;
 }
+.flexWrapperDSLView{
+  align-items: center;
+  justify-content: space-between;
+  }
 .flexWrapperFile {
   padding-top: 5rem;
   padding-bottom: 2rem;
